--- a/templates/base.html
+++ b/templates/base.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %}{% endblock %}</title>
     {% block insert %}
-        {% load staticfiles %}
+        {% load static %}
 
-        <link rel="stylesheet" href="{% static "css/bootstrap.css" %}" >
-        <link rel="stylesheet" href="{% static "css/responsive-nav.css" %}">
-        <link rel="stylesheet" href="{% static "css/styles.css" %}">
+        <link rel="stylesheet" href="{% static "/css/bootstrap.css" %}" >
+        <link rel="stylesheet" href="{% static "/css/responsive-nav.css" %}">
+        <link rel="stylesheet" href="{% static "/css/styles.css" %}">
 
-        <script src="{% static "js/jquery-2.1.1.js" %}"></script>
-        <script src="{% static "js/bootstrap.min.js" %}"></script>
-        <script src="{% static "js/responsive-nav.js" %}"></script>
-        <script src="{% static "js/unslider.js" %}"></script>
+        <script src="{% static "/js/jquery-2.1.1.js" %}"></script>
+        <script src="{% static "/js/bootstrap.min.js" %}"></script>
+        <script src="{% static "/js/responsive-nav.js" %}"></script>
+        <script src="{% static "/js/unslider.js" %}"></script>
     {% endblock %}
 </head>
 <body>
@@ -28,15 +28,15 @@
         <div id="header">
                 <div class="hotel-logo">
                     <a href="/" class="">
-                        <img src="{% static "pic/hotel-logo.png" %}" alt="武汉新世界酒店">
+                        <img src="{% static "/img/hotel-logo.png" %}" alt="武汉新世界酒店">
                     </a>
                 </div>
                 <div id="navbar">
                     <ul>
-                        <li><a href="/">首页</a></li>
-                        <li><a href="/order">客房预定</a></li>
-                        <li><a href="/roominfo">客房信息</a></li>
-                        <li><a href="/about">关于酒店</a></li>
+                        <li><a href="{% url 'index' %}">首页</a></li>
+                        <li><a href="{% url 'order' %}">客房预定</a></li>
+                        <li><a href="{% url 'roomInfo' %}">客房信息</a></li>
+                        <li><a href="{% url 'about' %}">关于酒店</a></li>
                     </ul>
                 </div>
             </div>
