--- a/templates/index.html
+++ b/templates/index.html
@@ -4,21 +4,21 @@
     <div class="wrap">
 {% endblock %}
 {% block content %}
-    {% load staticfiles %}
+    {% load static %}
             <div class="banner">
                 <ul>
                     <li>
-                        <img src="{% static "pic/key_home_1.jpg" %} ">
+                        <img src="{% static "/img/key_home_1.jpg" %} ">
                     </li>
                     <li>
-                        <img src="{% static "pic/key_home_2.jpg" %} ">
+                        <img src="{% static "/img/key_home_2.jpg" %} ">
                     </li>
                     <li>
-                        <img src="{% static "pic/key_home_3.jpg" %} ">
+                        <img src="{% static "/img/key_home_3.jpg" %} ">
                     </li>
                 </ul>
 
-                <div class="order"><a href="/order"><h2>预订</h2></a></div>
+                <div class="order"><a href="{% url 'order' %}"><h2>预订</h2></a></div>
             </div>
             <script>
 
